webadmin: Change view issues for SanStorage lists
Screenshot: https://imgur.com/a/M1S9P

Change hover for removing LUNs:
  Now presents "LUN is a metadata device of a Storage Domain"
  instead of "LUN is already part of a Storage Domain"

Change column's header:
  Instead of "Dev. Size", header should be just "Size"

Fix warning message's alignment:
  When creating a new direct LUN for a new VM, the error message above
  the table was overlapped by the vertical 'Targets > LUNs' tab.

Bug-Url: https://bugzilla.redhat.com/1517108

--- a/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/SanStorageListLunTable.css
+++ b/frontend/webadmin/modules/gwt-common/src/main/resources/org/ovirt/engine/ui/common/css/SanStorageListLunTable.css
@@ -17,7 +17,7 @@
 	border-top: 1px solid #E3EDF6;
 	border-bottom: 1px solid #E3EDF6;
 	border-left: 1px solid #D7D7E1;
-	padding-top: 0px;
+	padding-top: -3px;
 	padding-bottom: 0px;
 	padding-left: 5px;
 	padding-right: 5px;
